--- a/home.html
+++ b/home.html
@@ -1910,6 +1910,7 @@
                 <td contenteditable>21</td>
             </tr>
         </table>
+        <div class="td_selection"></div>
         <div class="tds_selection"></div>
     </div>
 
