--- a/home.html
+++ b/home.html
@@ -690,7 +690,7 @@
                 <td contenteditable>95</td>
                 <td contenteditable>33</td>
             </tr>
-            <tr>
+            <!--<tr>
                 <td contenteditable>63</td>
                 <td contenteditable>7</td>
                 <td contenteditable>23</td>
@@ -2345,10 +2345,14 @@
                 <td contenteditable>55</td>
                 <td contenteditable>37</td>
                 <td contenteditable>32</td>
-            </tr>
+            </tr>-->
         </table>
         <div class="td_selection"></div>
         <div class="tds_selection"></div>
+        <div class="up"></div>
+        <div class="down"></div>
+        <div class="right"></div>
+        <div class="left"></div>
     </div>
 
     <script src="js/table_engine.js"></script>
