нормас придумать чтоб не прокручивалось когда до конца прокрутилось

--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
 </header>
 
 <body>
+    <div class="fast"></div>
+    <div class="slow"></div>
     <div class="horiz_stub_up"></div>
     <div class="horiz_stub_bottom"></div>
     <div class="vert_stub_left"></div>
@@ -690,7 +692,7 @@
                 <td contenteditable>95</td>
                 <td contenteditable>33</td>
             </tr>
-            <!--<tr>
+            <tr>
                 <td contenteditable>63</td>
                 <td contenteditable>7</td>
                 <td contenteditable>23</td>
@@ -2345,14 +2347,9 @@
                 <td contenteditable>55</td>
                 <td contenteditable>37</td>
                 <td contenteditable>32</td>
-            </tr>-->
+            </tr>
         </table>
-        <div class="td_selection"></div>
-        <div class="tds_selection"></div>
-        <div class="up"></div>
-        <div class="down"></div>
-        <div class="right"></div>
-        <div class="left"></div>
+        <div class="td_selection"><iframe name="td_selection_frame"></iframe></div>
     </div>
 
     <script src="js/table_engine.js"></script>
