--- a/home.html
+++ b/home.html
@@ -47,6 +47,7 @@
     </table>
 
     <div class="content">
+        <iframe name="content_frame"></iframe>
         <table class="table_body">
             <tr>
                 <td contenteditable>1</td>
