--- a/home.html
+++ b/home.html
@@ -3378,8 +3378,16 @@
         </table>
         <div class="td_selection"><iframe name="td_selection_frame"></iframe></div>
     </div>
-
+    <div class="context_menu">
+        78787<br>
+        78787<br>
+        78787<br>
+        78787<br>
+        78787<br>
+        78787<br>
+    </div>
     <script src="js/table_engine.js"></script>
+    <script src="js/context_engine.js"></script>
     <script src="js/map.js"></script>
 </body>
 
