--- a/home.html
+++ b/home.html
@@ -3378,14 +3378,12 @@
         </table>
         <div class="td_selection"><iframe name="td_selection_frame"></iframe></div>
     </div>
-    <div class="context_menu">
-        78787<br>
-        78787<br>
-        78787<br>
-        78787<br>
-        78787<br>
-        78787<br>
-    </div>
+    <ul class="right_context_menu">
+        <li class="r_copy">Копировать</li>
+        <li class="r_past">Вставить</li>
+        <li class="r_сut">Вырезать</li>
+        <li class="r_clear">Очистить</li>
+    </ul>
     <script src="js/table_engine.js"></script>
     <script src="js/context_engine.js"></script>
     <script src="js/map.js"></script>
