focus, tab, context normas

--- a/home.html
+++ b/home.html
@@ -65,8 +65,8 @@
         <table class="table_body">
             <tr>
                 <td contenteditable>1</td>
-                <td contenteditable>38</td>
-                <td contenteditable>36</td>
+                <td tabindex="0">38</td>
+                <td tabindex="0">36</td>
                 <td contenteditable>25</td>
                 <td contenteditable>18</td>
                 <td contenteditable>88</td>
@@ -88,8 +88,8 @@
             </tr>
             <tr>
                 <td contenteditable>41</td>
-                <td contenteditable>76</td>
-                <td contenteditable>71</td>
+                <td>76</td>
+                <td>71</td>
                 <td contenteditable>17</td>
                 <td contenteditable>64</td>
                 <td contenteditable>53</td>
@@ -111,8 +111,8 @@
             </tr>
             <tr>
                 <td contenteditable>21</td>
-                <td contenteditable>76</td>
-                <td contenteditable>37</td>
+                <td>76</td>
+                <td>37</td>
                 <td contenteditable>74</td>
                 <td contenteditable>54</td>
                 <td contenteditable>20</td>
@@ -134,8 +134,8 @@
             </tr>
             <tr>
                 <td contenteditable>43</td>
-                <td contenteditable>21</td>
-                <td contenteditable>13</td>
+                <td>21</td>
+                <td>13</td>
                 <td contenteditable>61</td>
                 <td contenteditable>42</td>
                 <td contenteditable>26</td>
@@ -157,8 +157,8 @@
             </tr>
             <tr>
                 <td contenteditable>0</td>
-                <td contenteditable>45</td>
-                <td contenteditable>16</td>
+                <td>45</td>
+                <td>16</td>
                 <td contenteditable>65</td>
                 <td contenteditable>69</td>
                 <td contenteditable>34</td>
@@ -3384,9 +3384,10 @@
         <li class="r_сut">Вырезать</li>
         <li class="r_clear">Очистить</li>
     </ul>
-    <script src="js/table_engine.js"></script>
-    <script src="js/context_engine.js"></script>
-    <script src="js/map.js"></script>
+    <ul class="left_context_menu"></ul>
+    <script src="js/table_engine.js" defer></script>
+    <script src="js/context_engine.js" defer></script>
+    <script src="js/map.js" defer></script>
 </body>
 
 <footer>
