--- a/home.html
+++ b/home.html
@@ -64,6 +64,29 @@
         <iframe name="content_frame"></iframe>
         <table class="table_body">
             <tr>
+                <td contenteditable></td>
+                <td tabindex="0"></td>
+                <td tabindex="0"></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+            </tr>
+            <tr>
                 <td contenteditable>1</td>
                 <td tabindex="0">38</td>
                 <td tabindex="0">36</td>
@@ -3383,6 +3406,8 @@
         <li class="r_past">Вставить</li>
         <li class="r_сut">Вырезать</li>
         <li class="r_clear">Очистить</li>
+        <li class="r_row_up">Вставить строку сверху</li>
+        <li class="r_row_down">Вставить строку снизу</li>
     </ul>
     <ul class="left_context_menu"></ul>
     <script src="js/table_engine.js" defer></script>
