context rows add

--- a/home.html
+++ b/home.html
@@ -64,29 +64,6 @@
         <iframe name="content_frame"></iframe>
         <table class="table_body">
             <tr>
-                <td contenteditable></td>
-                <td tabindex="0"></td>
-                <td tabindex="0"></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-                <td contenteditable></td>
-            </tr>
-            <tr>
                 <td contenteditable>1</td>
                 <td tabindex="0">38</td>
                 <td tabindex="0">36</td>
@@ -2393,10 +2370,10 @@
         <iframe name="content_frame"></iframe>
         <table class="table_body">
             <tr>
-                <td contenteditable width="25">44</td>
-                <td contenteditable>29</td>
-                <td contenteditable>77</td>
-                <td contenteditable>61</td>
+                <td tabindex="0" width="25"></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
+                <td contenteditable></td>
             </tr>
             <tr>
                 <td contenteditable>35</td>
@@ -2999,7 +2976,7 @@
         <iframe name="content_frame"></iframe>
         <table class="table_body">
             <tr>
-                <td contenteditable width="25">7</td>
+                <td tabindex="0" width="25">7</td>
                 <td contenteditable>8</td>
             </tr>
             <tr>
