--- a/home.html
+++ b/home.html
@@ -3380,14 +3380,16 @@
     </div>
     <ul class="right_context_menu">
         <li class="r_copy">Копировать</li>
-        <li class="r_past">Вставить</li>
+        <li class="r_paste">Вставить</li>
         <li class="r_сut">Вырезать</li>
         <li class="r_clear">Очистить</li>
         <li class="r_row_up">Вставить строку сверху</li>
         <li class="r_row_down">Вставить строку снизу</li>
     </ul>
     <ul class="left_context_menu"></ul>
+    <script src="js/clipboard.min.js"></script>
     <script src="js/table_engine.js" defer></script>
+    <script src="js/clipboard_engine.js" defer></script>
     <script src="js/context_engine.js" defer></script>
     <script src="js/map.js" defer></script>
 </body>
