select on focus and other shit

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
 
     <div class="content">
         <iframe name="content_frame"></iframe>
-        <table class="table_body">
+        <table class="table_body" tabindex="0">
             <tr>
                 <td contenteditable>1</td>
                 <td tabindex="0">38</td>
