draw cell rect bug fixed

--- a/home.html
+++ b/home.html
@@ -2368,7 +2368,7 @@
     </div>
     <div class="content">
         <iframe name="content_frame"></iframe>
-        <table class="table_body">
+        <table class="table_body" tabindex="0">
             <tr>
                 <td tabindex="0" width="25"></td>
                 <td contenteditable></td>
@@ -2974,7 +2974,7 @@
     </div>
     <div class="content">
         <iframe name="content_frame"></iframe>
-        <table class="table_body">
+        <table class="table_body" tabindex="0">
             <tr>
                 <td tabindex="0" width="25">7</td>
                 <td contenteditable>8</td>
