--- a/home.html
+++ b/home.html
@@ -3385,6 +3385,7 @@
         <li class="r_clear">Очистить</li>
         <li class="r_row_up">Вставить строку сверху</li>
         <li class="r_row_down">Вставить строку снизу</li>
+        <li class="r_delete_row">Удалить строку</li>
     </ul>
     <ul class="left_context_menu"></ul>
     <script src="js/clipboard.min.js"></script>
