--- a/home.html
+++ b/home.html
@@ -3393,6 +3393,7 @@
     <script src="js/clipboard_engine.js" defer></script>
     <script src="js/context_engine.js" defer></script>
     <script src="js/input_engine.js" defer></script>
+    <script src="js/history_engine.js" defer></script>
     <script src="js/map.js" defer></script>
 </body>
 
