--- a/registration.html
+++ b/registration.html
@@ -17,16 +17,16 @@
     <div class="registration">
         <div class="registration_content">
             <span class="auth_span">Регистрация</span>
-            <form name="registration_form" id="registration_form" action="php/reg.php" method="POST">
-                <input type="email" name="email" id="email" placeholder="Ваш e-mail">
-                <span class="email_error">Регистрация</span>
-                <input type="text" name="name" id="name" placeholder="Имя Фамилия">
-                <span class="name_error">Регистрация</span>
-                <input type="password" name="password1" id="password1" placeholder="Придумайте пароль">
-                <span class="password1_error">Регистрация</span>
-                <input type="password" name="password2" id="password2" placeholder="Повторите пароль">
-                <span class="password2_error">Регистрация</span>
-                <button name="reg_button" id="reg_button">Зарегистрироваться</button>
+            <form name="registration_form" class="registration_form" action="php/reg.php" method="POST">
+                <input type="email" name="email" class="email" placeholder="Ваш e-mail">
+                <span class="email_e">Регистрация</span>
+                <input type="text" name="name" class="name" placeholder="Имя Фамилия">
+                <span class="name_e">Регистрация</span>
+                <input type="password" name="password1" class="password1" placeholder="Придумайте пароль">
+                <span class="password1_e">Регистрация</span>
+                <input type="password" name="password2" class="password2" placeholder="Повторите пароль">
+                <span class="password2_e">Регистрация</span><br>
+                <button name="reg_button" class="reg_button">Зарегистрироваться</button>
             </form>
         </div>
     </div>
