--- a/registration.html
+++ b/registration.html
@@ -25,13 +25,13 @@
                 <input type="password" name="password1" class="password1" placeholder="Придумайте пароль">
                 <span class="password1_e">Регистрация</span>
                 <input type="password" name="password2" class="password2" placeholder="Повторите пароль">
-                <span class="password2_e">Регистрация</span><br>
-                <button name="reg_button" class="reg_button">Зарегистрироваться</button>
+                <span class="password2_e">Регистрация</span>
+                <input type="submit" name="reg_button" class="reg_button" value="Зарегистрироваться">
             </form>
         </div>
     </div>
-    <script src="js/auth.js"></script>
     <script src="js/ajax.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 
 </html>
