--- a/login.html
+++ b/login.html
@@ -9,13 +9,14 @@
 </head>
 
 <header>
-    <a href="#">Регистрация</a>
+    <a href="registration.html">Регистрация</a>
     <span>Экопрогноз</span>
 </header>
 
 <body>
     <div class="login">
-        <div class="login_content">     
+        <div class="login_content">   
+            <span class="ver_span">Подтвердите регистрацию: на ваш e-mail отправлено письмо с регистрационной ссылкой<br></span> 
             <span class="auth_span">Вход</span>
             <form name="login_form" class="login_form" action="php/login.php" method="POST" novalidate>
                 <span class="bd_e">Qwerty</span>
