--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 </header>
 
 <body>
+    <div class="preloader"></div>
     <div class="fast"></div>
     <div class="slow"></div>
     <div class="horiz_stub_up"></div>
@@ -3388,6 +3389,9 @@
         <li class="r_delete_row">Удалить строку</li>
     </ul>
     <ul class="left_context_menu"></ul>
+    <script src="js/ajax.js" defer></script>
+    <script src="js/animation.js" defer></script>
+    <script src="js/home.js" defer></script>
     <script src="js/clipboard.min.js"></script>
     <script src="js/table_engine.js" defer></script>
     <script src="js/clipboard_engine.js" defer></script>
