--- a/registration.html
+++ b/registration.html
@@ -14,6 +14,7 @@
 </header>
 
 <body>
+    <div class="preloader"></div>
     <div class="registration">
         <div class="registration_content">     
             <span class="auth_span">Регистрация</span>
@@ -31,8 +32,9 @@
             </form>
         </div>
     </div>
-    <script src="js/ajax.js"></script>
-    <script src="js/reg.js"></script>
+    <script src="js/ajax.js" defer></script>
+    <script src="js/animation.js" defer></script>
+    <script src="js/reg.js" defer></script>
 </body>
 
 </html>
