--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,8 @@
 <body>
     <div class="preloader"></div>
     <div class="registration">
-        <div class="registration_content">     
+        <div class="registration_content">
+            <div class="loader"></div>     
             <span class="auth_span">Регистрация</span>
             <form name="registration_form" class="registration_form" action="php/reg.php" method="POST" novalidate>
                 <span class="bd_e">Qwerty</span>
