--- a/home.html
+++ b/home.html
@@ -2,14 +2,16 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Экопрогнозззз</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Экопрогноз</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <header>
     <a href="#">Сохранить</a>
     <a href="#">Расчет</a>
+    <a href="settings.html">Настройки</a>
     <span>Экопрогноз</span>
 </header>
 
