--- a/registration.html
+++ b/registration.html
@@ -2,8 +2,9 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Экопрогноз - Регистрация</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Регистрация - Экопрогноз</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles_auth.css" />
 </head>
