--- a/login.html
+++ b/login.html
@@ -42,6 +42,7 @@
     </div>
     <script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
+    <script src="js/form_checkers.js" defer></script>
     <script src="js/login.js" defer></script>
 </body>
 
