--- a/registration.html
+++ b/registration.html
@@ -36,6 +36,7 @@
     </div>
     <script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
+    <script src="js/form_checkers.js" defer></script>
     <script src="js/reg.js" defer></script>
 </body>
 
