settings layout done

--- a/registration.html
+++ b/registration.html
@@ -21,6 +21,7 @@
             <div class="loader"></div>     
             <span class="auth_span">Регистрация</span>
             <form name="registration_form" class="registration_form" action="php/reg.php" method="POST" novalidate>
+                <span class="send_email_e">Qwerty</span>
                 <span class="bd_e">Qwerty</span>
                 <input type="email" name="email" class="email" placeholder="Ваш e-mail">
                 <span class="email_e">Qwerty</span>
