--- a/home.html
+++ b/home.html
@@ -16,7 +16,9 @@
 </header>
 
 <body>
-    <div class="preloader"></div>
+    <div class="preloader">
+        <span class="bd_e_preloader">Qwerty</span>
+    </div>
     <div class="fast"></div>
     <div class="slow"></div>
     <div class="horiz_stub_up"></div>
@@ -3393,6 +3395,7 @@
     <ul class="left_context_menu"></ul>
     <script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
+    <script src="js/form_checkers.js" defer></script>
     <script src="js/home.js" defer></script>
     <script src="js/clipboard.min.js"></script>
     <script src="js/table_engine.js" defer></script>
