--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,28 +15,34 @@
 </header>
 
 <body>
+    <div class="preloader">
+        <span class="bd_e_preloader">Qwerty</span>
+    </div>
     <div class="settings">
         <div class="settings_content">
             <span class="account_settings_span header_span">Настройки аккаунта</span>
             <span class="bd_e error">Qwerty</span>
-            <form name="name_form" class="name_form" action="php/login.php" method="POST" novalidate>
-                <span>Ваше имя:</span>
-                <input type="text" name="name" class="name" placeholder="Имя Фамилия">
-                <span class="name_e error" class="info">Qwerty</span>
-            </form>
-            <form name="email_form" class="email_form" action="php/login.php" method="POST" novalidate>
-                <span>Ваш email:</span>
-                <input type="email" name="email" class="email" placeholder="Ваш e-mail">
-                <span class="email_e error">Qwerty</span>
-            </form>
-            <form name="password_form" class="password_form" action="php/login.php" method="POST" novalidate>
-                <span>Ваш пароль:</span>
-                <input type="password" name="password0" class="password0" placeholder="Введите старый пароль">
-                <span class="password0_e error">Qwerty</span>
-                <input type="password" name="password1" class="password1" placeholder="Придумайте новый пароль">
-                <span class="password1_e error">Qwerty</span>
-                <input type="password" name="password2" class="password2" placeholder="Повторите новый пароль">
-                <span class="password2_e error">Qwerty</span>
+            <form name="save_set_form" class="save_set_form" method="POST" novalidate>
+                <form name="name_form" class="name_form" method="POST" novalidate>
+                    <span>Ваше имя:</span>
+                    <input type="text" name="name" class="name" placeholder="Имя Фамилия">
+                    <span class="name_e error" class="info">Qwerty</span>
+                </form>
+                <form name="email_form" class="email_form" method="POST" novalidate>
+                    <span>Ваш email:</span>
+                    <input type="email" name="email" class="email" placeholder="Ваш e-mail">
+                    <span class="email_e error">Qwerty</span>
+                </form>
+                <form name="password_form" class="password_form" method="POST" novalidate>
+                    <span>Ваш пароль:</span>
+                    <input type="password" name="password0" class="password0" placeholder="Введите старый пароль">
+                    <span class="password0_e error">Qwerty</span>
+                    <input type="password" name="password1" class="password1" placeholder="Придумайте новый пароль">
+                    <span class="password1_e error">Qwerty</span>
+                    <input type="password" name="password2" class="password2" placeholder="Повторите новый пароль">
+                    <span class="password2_e error">Qwerty</span>
+                </form>
+                <input type="submit" name="set_button" class="set_button" value="Сохранить изменения">
             </form>
             <span class="app_settings_span header_span">Настройки приложения</span>
             <div class="radio_div">
@@ -56,9 +63,17 @@
                 <input type="radio" name="autosave_rad" value="4" id="autosave_4">
                 <label for="autosave_4">10 м.</label>
             </div>
+            <div class="logout_div">
+                <form name="logout_form" class="logout_form" action="php/logout.php" method="POST" novalidate>
+                    <input type="submit" name="logout_button" class="logout_button" value="Выйти из аккаунта">
+                </form>
+            </div>
         </div>
     </div>
     <script src="js/ajax.js" defer></script>
     <script src="js/animation.js" defer></script>
+    <script src="js/form_checkers.js" defer></script>
+    <script src="js/settings.js" defer></script>
 </body>
+
 </html>
