--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация - Экопрогноз</title>
+    <title>РегистрацияЯЯЯЯЯЯ - Экопрогноз</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles_auth.css" />
 </head>
@@ -21,8 +21,8 @@
             <div class="loader"></div>     
             <span class="auth_span">Регистрация</span>
             <form name="registration_form" class="registration_form" action="php/reg.php" method="POST" novalidate>
-                <span class="send_email_e">Qwerty</span>
                 <span class="bd_e">Qwerty</span>
+                <span class="send_email_e">Qwerty</span>
                 <input type="email" name="email" class="email" placeholder="Ваш e-mail">
                 <span class="email_e">Qwerty</span>
                 <input type="text" name="name" class="name" placeholder="Имя Фамилия">
