--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>РегистрацияЯЯЯЯЯЯ - Экопрогноз</title>
+    <title>Регистрация - Экопрогноз</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles_auth.css" />
 </head>
