--- a/settings.html
+++ b/settings.html
@@ -20,8 +20,11 @@
     </div>
     <div class="settings">
         <div class="settings_content">
+            <!--<span class="email_span info_span">Подтвердите смену email: на указанный адрес отправлено письмо с инструкцией<br></span>
+            <span class="changes_span info_span">Изменения сохранены<br></span>-->
             <span class="account_settings_span header_span">Настройки аккаунта</span>
             <span class="bd_e error">Qwerty</span>
+            <span class="info_span">Qwerty</span>
             <form name="bd_form" class="bd_form" method="POST" novalidate>
                 <span class="subheader_span">Ваше имя:</span>
                 <input type="text" name="name" class="name" placeholder="Имя Фамилия">
