--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Экопрогноз</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles_home.css" />
 </head>
 
 <header>
@@ -17,7 +18,7 @@
                 <li><a>HZ</a></li>
             </ul>
         </li>
-        <li><a href="#">Расчет</a></li>
+        <li><a href="calculate.html">Расчет</a></li>
         <li><a href="settings.html">Настройки</a></li>
         <span>Экопрогноз</span>
     </ul>
