--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <a href="home.html">Назад</a>
+    <a href="home.html">Главная</a>
     <span>Экопрогноз</span>
 </header>
 
