--- a/calculate.html
+++ b/calculate.html
@@ -258,6 +258,18 @@
                 <span class="add_chart_button">+</span>
             </form>
             <span class="span_chart_info"></span>
+            <div class="chart_restangles"></div>
+            <div class="chart_settings">
+                <div class="chart_data">
+                    <span>1234</span>
+                    <span>1234</span>
+                    <span>1234</span>
+                    <span>1234</span>
+                    <span>1234</span>
+                    <span>1234</span>
+                </div>
+                <div class="chart_stuff">1212</div>
+            </div>
         </div>
         <select class="select_culture" name="select_culture">
             <option value="" disabled selected>Культура</option>
